--- a/pages/planes.html
+++ b/pages/planes.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto</title>
+    <title>Planes - Proyecto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Proyecto</a>
+                <a class="navbar-brand" href="../index.html">Proyecto</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
@@ -44,14 +44,14 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/planes.html">Planes</a>
+                            <a class="nav-link active" aria-current="page" href="planes.html">Planes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
                     <div class="d-flex align-items-center me-3">
-                        <a class="nav-link" href="pages/carrito.html">
+                        <a class="nav-link" href="carrito.html">
                             🛒
                         </a>
                     </div>
@@ -65,13 +65,68 @@
     </header>
 
     <main>
-        <button class="boton">
-            boton
-        </button>
-        <section>
-            <h2>Sección Principal</h2>
-            <p>Contenido principal aquí.</p>
-        </section>
+        <div class="container mt-4">
+            <h1>Nuestros Planes</h1>
+            
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Plan Básico</h4>
+                        </div>
+                        <div class="card-body">
+                            <h2>$99<small>/mes</small></h2>
+                            <ul>
+                                <li>Servicio básico</li>
+                                <li>Soporte por email</li>
+                                <li>Lorem, ipsum dolor.</li>
+                            </ul>
+                            <button class="boton w-100">
+                                Seleccionar Plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-4">
+                    <div class="card ">
+                        <div class="card-header">
+                            <h4>Plan Profesional</h4>
+                        </div>
+                        <div class="card-body">
+                            <h2>$199<small>/mes</small></h2>
+                            <ul>
+                                <li>Todo del plan básico</li>
+                                <li>Soporte prioritario</li>
+                                <li>Lorem, ipsum dolor.</li>
+                            </ul>
+                            <button class="boton w-100">
+                                Seleccionar Plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Plan Empresarial</h4>
+                        </div>
+                        <div class="card-body">
+                            <h2>$399<small>/mes</small></h2>
+                            <ul>
+                                <li>Todo del plan profesional</li>
+                                <li>Soporte 24/7</li>
+                                <li>Lorem, ipsum dolor./li>
+                            </ul>
+                            <button class="boton w-100">
+                                Seleccionar Plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -81,7 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
