--- a/pages/planes.html
+++ b/pages/planes.html
@@ -117,7 +117,7 @@
                             <ul>
                                 <li>Todo del plan profesional</li>
                                 <li>Soporte 24/7</li>
-                                <li>Lorem, ipsum dolor./li>
+                                <li>Lorem, ipsum dolor.</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
