--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Proyecto</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
