--- a/pages/planes.html
+++ b/pages/planes.html
@@ -11,9 +11,9 @@
 
 </head>
 
-<body>
+<body class="planes-body">
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Proyecto</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,20 +66,21 @@
 
     <main>
         <div class="container mt-4">
-            <h1>Nuestros Planes</h1>
+            <h1 class="text-center mb-5 planes-text">Nuestros Planes</h1>
             
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Plan Básico</h4>
+                    <div class="card planes-card">
+                        <div class="card-header text-center planes-card-header">
+                            <h4 class="planes-text">Plan Básico</h4>
                         </div>
-                        <div class="card-body">
-                            <h2>$99<small>/mes</small></h2>
-                            <ul>
+                        <div class="card-body text-center">
+                            <h2 class="planes-text">$99<small>/mes</small></h2>
+                            <ul class="list-unstyled mb-4 planes-text">
                                 <li>Servicio básico</li>
                                 <li>Soporte por email</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li>5GB de almacenamiento</li>
+                                <li>Actualizaciones mensuales</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
@@ -89,16 +90,18 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card ">
-                        <div class="card-header">
-                            <h4>Plan Profesional</h4>
+                    <div class="card planes-card-popular">
+                        <div class="card-header text-center planes-card-header-popular">
+                            <h4 class="planes-text">Plan Profesional</h4>
+                            <small class="planes-text-popular">Más Popular</small>
                         </div>
-                        <div class="card-body">
-                            <h2>$199<small>/mes</small></h2>
-                            <ul>
+                        <div class="card-body text-center">
+                            <h2 class="planes-text">$199<small>/mes</small></h2>
+                            <ul class="list-unstyled mb-4 planes-text">
                                 <li>Todo del plan básico</li>
                                 <li>Soporte prioritario</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li>50GB de almacenamiento</li>
+                                <li>Funciones avanzadas</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
@@ -108,22 +111,31 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Plan Empresarial</h4>
+                    <div class="card planes-card">
+                        <div class="card-header text-center planes-card-header">
+                            <h4 class="planes-text">Plan Empresarial</h4>
                         </div>
-                        <div class="card-body">
-                            <h2>$399<small>/mes</small></h2>
-                            <ul>
+                        <div class="card-body text-center">
+                            <h2 class="planes-text">$399<small>/mes</small></h2>
+                            <ul class="list-unstyled mb-4 planes-text">
                                 <li>Todo del plan profesional</li>
                                 <li>Soporte 24/7</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li>Almacenamiento ilimitado</li>
+                                <li>Funciones personalizadas</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
                             </button>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-12 text-center">
+                    <h3 class="planes-text">¿Tienes dudas?</h3>
+                    <p class="planes-text">Puedes cambiar de plan en cualquier momento</p>
+                    <p class="planes-text">Prueba gratuita de 14 días disponible</p>
                 </div>
             </div>
         </div>
