--- a/pages/planes.html
+++ b/pages/planes.html
@@ -130,7 +130,7 @@
 
             <div class="row mt-5">
                 <div class="col-12 text-center">
-                    <h3 class="planes-text">¿Tienes dudas?</h3>
+                    <h3 class="planes-text">¿Alguna duda?</h3>
                     <p class="planes-text">Puedes cambiar de plan en cualquier momento</p>
                     <p class="planes-text">Prueba gratuita de 14 días disponible</p>
                 </div>
