--- a/pages/planes.html
+++ b/pages/planes.html
@@ -8,12 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
 
 </head>
 
-<body>
+<body class="planes-body">
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-end">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Proyecto</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -24,23 +27,21 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Precios</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown
+                                Nosotros
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Matías Sione</a></li>
+                                <li><a class="dropdown-item" href="#">Gabriel Dino</a></li>
+                                <li><a class="dropdown-item" href="#">Jeremías Paletta</a></li>
+                                <li><a class="dropdown-item" href="#">Marco Ayquipa</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -66,20 +67,20 @@
 
     <main>
         <div class="container mt-4">
-            <h1>Nuestros Planes</h1>
+            <h1 class="text-center mb-5 planes-text">Nuestros Planes</h1>
             
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Plan Básico</h4>
+                    <div class="card planes-card">
+                        <div class="card-header text-center planes-card-header">
+                            <h4 class="planes-text">Plan Básico</h4>
                         </div>
-                        <div class="card-body">
-                            <h2>$99<small>/mes</small></h2>
-                            <ul>
+                        <div class="card-body text-center">
+                            <h2 class="planes-text">$99<small>/mes</small></h2>
+                            <ul class="list-unstyled mb-4 planes-text">
                                 <li>Servicio básico</li>
                                 <li>Soporte por email</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li>Actualizaciones mensuales</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
@@ -89,16 +90,17 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card ">
-                        <div class="card-header">
-                            <h4>Plan Profesional</h4>
+                    <div class="card planes-card-popular">
+                        <div class="card-header text-center planes-card-header-popular">
+                            <h4 class="planes-text">Plan Profesional</h4>
+                            <small class="planes-text-popular">Más Popular</small>
                         </div>
-                        <div class="card-body">
-                            <h2>$199<small>/mes</small></h2>
-                            <ul>
+                        <div class="card-body text-center">
+                            <h2 class="planes-text">$199<small>/mes</small></h2>
+                            <ul class="list-unstyled mb-4 planes-text">
                                 <li>Todo del plan básico</li>
                                 <li>Soporte prioritario</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li>Funciones avanzadas</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
@@ -108,22 +110,30 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Plan Empresarial</h4>
+                    <div class="card planes-card">
+                        <div class="card-header text-center planes-card-header">
+                            <h4 class="planes-text">Plan Empresarial</h4>
                         </div>
-                        <div class="card-body">
-                            <h2>$399<small>/mes</small></h2>
-                            <ul>
+                        <div class="card-body text-center">
+                            <h2 class="planes-text">$399<small>/mes</small></h2>
+                            <ul class="list-unstyled mb-4 planes-text">
                                 <li>Todo del plan profesional</li>
                                 <li>Soporte 24/7</li>
-                                <li>Lorem, ipsum dolor./li>
+                                <li>Funciones personalizadas</li>
                             </ul>
                             <button class="boton w-100">
                                 Seleccionar Plan
                             </button>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-12 text-center">
+                    <h3 class="planes-text">¿Alguna duda?</h3>
+                    <p class="planes-text">Puedes cambiar de plan en cualquier momento</p>
+                    <p class="planes-text">Prueba gratuita de 14 días disponible</p>
                 </div>
             </div>
         </div>
