hice la tarea xd

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                                 Nosotros
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item not-active" href="#">Matías Sione</a></li>
-                                <li><a class="dropdown-item not-active" href="#">Gabriel Dino</a></li>
-                                <li><a class="dropdown-item not-active" href="#">Jeremías Paletta</a></li>
-                                <li><a class="dropdown-item not-active" href="#">Marco Ayquipa</a></li>
+                                <li><a class="dropdown-item not-active" href="/pages/matiSione.html">Matías Sione</a></li>
+                                <li><a class="dropdown-item not-active" href="/pages/gabrielDino.html">Gabriel Dino</a></li>
+                                <li><a class="dropdown-item not-active" href="/pages/JerePaletta.html">Jeremías Paletta</a></li>
+                                <li><a class="dropdown-item not-active" href="/pages/marcoAyquipa.html">Marco Ayquipa</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
