--- a/pages/planes.html
+++ b/pages/planes.html
@@ -48,15 +48,15 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
-                    <div class="d-flex align-items-center me-3">
-                        <a class="nav-link" href="carrito.html">
-                            🛒
+                    <div class="d-flex align-items-center">
+                        <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
+                            <span class="icon-moon">🌙</span>
+                            <span class="icon-sun">☀️</span>
+                        </button>
+                        <a class="nav-link ms-3" href="carrito.html">
+                            🛒 Carrito
                         </a>
                     </div>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
                 </div>
             </div>
         </nav>
