--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -101,7 +101,7 @@
                             <button class="boton w-100 mt-3" disabled>
                                 Finalizar Compra
                             </button>
-                            <button class="btn btn-outline-danger w-100 mt-2" onclick="vaciarCarrito()" style="display: none;" id="btnVaciarCarrito">
+                            <button class="btn btn-outline-danger w-100 mt-2" onclick="VaciarCarrito()" style="display: none;" id="btnVaciarCarrito">
                                 Vaciar Carrito
                             </button>
                         </div>
