--- a/pages/JerePaletta.html
+++ b/pages/JerePaletta.html
@@ -17,7 +17,7 @@
      <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-end">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Proyecto</a>
+                <a class="navbar-brand" href="../index.html">LCDLT</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -52,10 +52,6 @@
                             🛒
                         </a>
                     </div>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
                 </div>
             </div>
         </nav>
@@ -71,7 +67,7 @@
         Actualmente me estoy formando como programador, explorando distintas áreas del desarrollo de software, desde la lógica y algoritmia hasta el diseño de interfaces. Me gusta enfrentar desafíos que me permitan aprender, crecer y crear soluciones que tengan impacto real.</p>
         <div class="linkSocial">
         <a href="" target="_blank" class="boton">Contacto</a>
-        <a href="" class="boton">Mis proyectos</a>
+        <a href="#proyectosJere" class="boton">Mis proyectos</a>
         </div>
         </div>
         <div class="fotoPresentacion">
@@ -99,7 +95,7 @@
             </div>
         </section>
 
-        <section class="proyectos">
+        <section id="proyectosJere" class="proyectos">
             <h2 class="titulo">Proyectos personales</h2>
             <div class="contenedorProyecto">
                 <div class="cardProyecto">
