--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-end">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Proyecto</a>
+        <a class="navbar-brand" href="../index.html">LCDLT</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -43,10 +43,6 @@
           <div class="d-flex align-items-center me-3">
             <a class="nav-link" href="carrito.html">🛒</a>
           </div>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-          </form>
         </div>
       </div>
     </nav>
