--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
         </section>
         <section>
-            <div class="container text-center py-5 precios">
+            <div class="container text-center py-5">
                 <h1 class="titulosInicio">MEJOR PLAN</h1>
             </div>
             <div class="container text-center">
