Arreglo redireccionamiento y modo claro

--- a/pages/JerePaletta.html
+++ b/pages/JerePaletta.html
@@ -70,7 +70,7 @@
         <p class="lead">¡Hola! Soy Jeremías Paletta, estudiante de la Tecnicatura Universitaria en Programación y apasionado por la tecnología, el arte y la creatividad.
         Actualmente me estoy formando como programador, explorando distintas áreas del desarrollo de software, desde la lógica y algoritmia hasta el diseño de interfaces. Me gusta enfrentar desafíos que me permitan aprender, crecer y crear soluciones que tengan impacto real.</p>
         <div class="linkSocial">
-        <a href="" target="_blank" class="boton">Contacto</a>
+        <a href="contacto.html" class="boton">Contacto</a>
         <a href="#proyectosJere" class="boton">Mis proyectos</a>
         </div>
         </div>
