--- a/pages/planes.html
+++ b/pages/planes.html
@@ -111,7 +111,7 @@
                             <h4 class="planes-text">Plan Empresarial</h4>
                         </div>
                         <div class="card-body text-center">
-                            <h2 class="planes-text"></h2>
+                            <h2 class="planes-text">$399<small>/mes</small></h2>
                             <ul class="list-unstyled mb-4 planes-text">
                                 <li>Todo del plan profesional</li>
                                 <li>Soporte 24/7</li>
