--- a/pages/gabrielDino.html
+++ b/pages/gabrielDino.html
@@ -70,8 +70,8 @@
         <p class="lead">¡Hola! Soy Gabriel Dino, estudiante de la Tecnicatura Universitaria en Programación y apasionado por la tecnología, el arte y la creatividad.
         Actualmente me estoy formando como programador, explorando distintas áreas del desarrollo de software, desde la lógica y algoritmia hasta el diseño de interfaces. Me gusta enfrentar desafíos que me permitan aprender, crecer y crear soluciones que tengan impacto real.</p>
         <div class="linkSocial">
-        <a href="" target="_blank" class="boton">Contacto</a>
-        <a href="" class="boton">Mis proyectos</a>
+        <a href="contacto.html" class="boton">Contacto</a>
+        <a href="#proyectos" class="boton">Mis proyectos</a>
         </div>
         </div>
         <div class="fotoPresentacion">
